--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "aws-sdk": "^2.1691.0",
+    "cheerio": "^1.0.0-rc.12",
+    "dayjs": "^1.11.13",
+    "node-fetch": "^3.3.2",
+    "query-string": "^9.1.0"
   }
 }
