--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2",
+    "@aws-sdk/client-s3": "^3.705.0",
     "aws-sdk": "^2.1691.0",
     "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.13",
+    "express": "^4.21.2",
     "node-fetch": "^3.3.2",
     "query-string": "^9.1.0"
-  }
+  },
+  "type": "commonjs"
 }
