--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,8 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
+{
+    "version": 2,
+    "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
+    "framework": null,
+    "installCommand": null,
+    "buildCommand": "",
+    "outputDirectory": "public"
+  }
